syntax = "proto3";

option csharp_namespace = "ProductGrpc.Protos";
import "google/protobuf/timestamp.proto";

service ProductGrpcService{
	rpc GetProduct(GetProductRequest) returns (ProductModel);
	rpc GetAllProduct(GetAllProductRequest) returns (stream ProductModel);

	rpc AddProduct(AddProductRequest) returns (ProductModel);
	rpc UpdateProduct(UpdateProductRequest) returns (ProductModel);
	rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);

	rpc InsertBulkProduct(stream ProductModel) returns (InsertBulkProductResponse);
}

message GetProductRequest{
	int32 productId = 1;
}

message GetAllProductRequest{
}

message AddProductRequest{
	ProductModel product = 1;
}

message UpdateProductRequest{
	ProductModel product = 1;
}

message DeleteProductRequest{
	int32 productId = 1;
}

message DeleteProductResponse{
	bool success = 1;
}

message InsertBulkProductResponse{
	bool success = 1;
	int32 insertCount = 2;
}

message ProductModel{
	int32 productId = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	ProductStatus status = 5;
	google.protobuf.Timestamp createdTime = 6;
}

enum ProductStatus{
	STATUS_UNSPECIFIED = 0;
	IN_STOCK = 1;
	LOW = 2;
}
